# Replicator

./: .gitmodules  CMakeLists.txt
glfw-3.3/: CMakeLists.txt
include/: action.hpp  camera.hpp  engine.hpp  hierarchy.hpp  lights.hpp  material.hpp  matrix_op.hpp  mesh.hpp  model_loader.hpp  models.hpp  object.hpp  shaders.hpp  state.hpp  transform.hpp  window.hpp  world.hpp
include/glad/: glad.h
include/replicator/: box.hpp  camera.hpp  deepcopy.hpp  dirty.hpp  engine.hpp  hierarchy.hpp  input.hpp  keys.hpp  material.hpp  mesh.hpp  model_loader.hpp  models.hpp  object.hpp  shaders.hpp  texture.hpp  time.hpp  transform.hpp  window.hpp
include/replicator/geometry/: box.hpp  plane.hpp  ray.hpp
shaders/: fragment_test.glsl  vertex_test.glsl
src/: box.cpp  camera.cpp  deepcopy.cpp  engine.cpp  glad.c  hierarchy.cpp  lights.cpp  main.cpp  matrix_op.cpp  mesh.cpp  model_loader.cpp  models.cpp  object.cpp  shaders.cpp  texture.cpp  transform.cpp  window.cpp  world.cpp
src/geometry/: box.cpp  ray.cpp
